# rust-lib

./: .env  Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: build.yaml
crates/diesel_crud_derive/: Cargo.toml
crates/diesel_crud_derive/src/: attributes.rs  common.rs  create.rs  delete.rs  lib.rs  list.rs  read.rs  update.rs
crates/diesel_crud_trait/: Cargo.toml
crates/diesel_crud_trait/src/: error.rs  lib.rs
crates/into_response_derive/: Cargo.toml
crates/into_response_derive/src/: derive.rs  lib.rs
crates/read_files/: Cargo.toml
crates/read_files/src/: lib.rs  read_files.rs
crates/read_files/tests/: lib.rs
crates/tests/: Cargo.toml  diesel.toml
crates/tests/migrations/2024-08-04-214620_init_tables/: up.sql
crates/tests/src/: lib.rs
crates/tests/tests/: diesel_crud_derive.rs  test_containers.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/multipart_file/: Cargo.toml
examples/multipart_file/src/: main.rs
examples/openai-assistant/: Cargo.toml
examples/openai-assistant/src/: main.rs
src/: lib.rs  traits.rs
src/axum/: app.rs  extractor.rs  load.rs  mod.rs  response.rs  router.rs  wrappers.rs
src/diesel/: mod.rs  pool.rs
src/io/: console.rs  file.rs
src/nom/: combinators.rs  mod.rs  util.rs
src/openai/: assistants.rs  chat.rs  mod.rs  streams.rs  types.rs
src/serde/: response.rs
src/time/: common.rs  mod.rs
src/vector/: distinct.rs  map.rs  matrix.rs  mod.rs  set.rs
