[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.79.0"
authors = ["Martin Berg Alstad"]
homepage = "emberal.github.io"

[package]
name = "lib"
version = "1.4.1-hotfix"
description = "A library with utilities and helper fuctions."
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }

[lib]

[dependencies]
# Api
axum = { version = "0.7", optional = true, features = ["multipart"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace", "cors", "normalize-path"] }
# Async
tokio = { version = "1.38", optional = true, features = ["fs"] }
tokio-util = { version = "0.7", optional = true, features = ["io"] }
# Error handling
thiserror = { version = "1.0", optional = true }
# Logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
# Parsing
nom = { version = "7.1", optional = true }
# Procedural macros
into-response-derive = { path = "crates/into_response_derive", optional = true }
read-files = { path = "crates/read_files", optional = true }
# Serialization / Deserialization
serde = { version = "1.0", optional = true, features = ["derive"] }

[workspace.dependencies]
syn = "2.0"
quote = "1.0"

[features]
axum = ["dep:axum", "dep:tower", "dep:tower-http", "dep:thiserror", "dep:tracing", "dep:tracing-subscriber", "dep:tokio"]
io = ["dep:tokio", "dep:tokio-util"]
iter = []
nom = ["dep:nom"]
serde = ["dep:serde"]
derive = ["dep:into-response-derive", "axum", "serde"]
read-files = ["dep:read-files"]
