[workspace]
members = ["crates/*"]
exclude = ["examples"]

[workspace.package]
edition = "2021"
rust-version = "1.80.1"
authors = ["Martin Berg Alstad"]
homepage = "emberal.github.io"

[package]
name = "lib"
version = "1.4.3"
description = "A library with utilities and helper fuctions."
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }

[lib]

[dependencies]
# Api
axum = { version = "0.7", optional = true, features = ["multipart"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace", "cors", "normalize-path"] }
# Async
tokio = { version = "1.39", optional = true, features = ["fs"] }
tokio-util = { version = "0.7", optional = true, features = ["io"] }
# Database
diesel-crud-derive = { path = "crates/diesel_crud_derive", optional = true }
diesel-crud-trait = { path = "crates/diesel_crud_trait", optional = true }
# Error handling
thiserror = { version = "1.0", optional = true }
# Logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
# Parsing
nom = { version = "7.1", optional = true }
# Procedural macros
into-response-derive = { path = "crates/into_response_derive", optional = true }
read-files = { path = "crates/read_files", optional = true }
# Serialization / Deserialization
serde = { version = "1.0", optional = true, features = ["derive"] }
# Time
chrono = { version = "0.4", optional = true, features = ["serde"] }
# Utils
derive_more = { version = "1.0", features = ["from", "constructor"] }

[workspace.dependencies]
syn = "2.0"
quote = "1.0"
deluxe = "0.5"
proc-macro2 = "1.0"
diesel = "2.2"
diesel-async = "0.5"

[features]
axum = ["dep:axum", "dep:tower", "dep:tower-http", "dep:thiserror", "dep:tracing", "dep:tracing-subscriber", "dep:tokio"]
diesel = ["dep:diesel-crud-trait"]
io = ["dep:tokio", "dep:tokio-util"]
iter = []
nom = ["dep:nom"]
serde = ["dep:serde"]
derive = ["dep:into-response-derive", "dep:diesel-crud-derive"]
read-files = ["dep:read-files"]
time = ["dep:chrono"]
