[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
diesel = { workspace = true }
diesel-async = { workspace = true }
lib = { path = "../../../lib", features = ["diesel", "derive"] }

[dev-dependencies]
tokio = { version = "1.39", features = ["macros"] }
dotenvy_macro = "0.15"
